force-app/main/default/objects/OpportunityLineItem/fields/Account_Opportunity_Products_and_Project__c.field-meta.xml
<CustomField>
    <fullName>Account_Opportunity_Products_and_Project__c</fullName>
    <formula>Opportunity.Account_Name__c&amp;&quot; - &quot;&amp;Opportunity.Name&amp;&quot; - &quot;&amp; Product_Name__c &amp;&quot; - &quot;&amp; WD_PRJ_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Opportunity Products and Project</label>
    <type>Text</type>
</CustomField>