force-app/main/default/objects/OpportunityLineItem/fields/Accrued__c.field-meta.xml
<CustomField>
    <fullName>Accrued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accrued</label>
    <type>Checkbox</type>
</CustomField>