force-app/main/default/objects/OpportunityLineItem/fields/Active_Product__c.field-meta.xml
<CustomField>
    <fullName>Active_Product__c</fullName>
    <formula>IF( PricebookEntry.IsActive, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Product</label>
    <type>Checkbox</type>
</CustomField>