force-app/main/default/objects/OpportunityLineItem/fields/Allocation__c.field-meta.xml
<CustomField>
    <fullName>Allocation__c</fullName>
    <formula>Quantity/160</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>