force-app/main/default/objects/OpportunityLineItem/fields/Average_Cost_per_Product_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Average_Cost_per_Product_Schedule__c</fullName>
    <formula>Hard_Cost__c  / Count_of_Product_Schedules__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Cost per Product Schedule</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>