force-app/main/default/objects/OpportunityLineItem/fields/Budget_Amount__c.field-meta.xml
<CustomField>
    <fullName>Budget_Amount__c</fullName>
    <formula>IF( Opportunity.Forecast_Category_Formula__c = &quot;Budget&quot;, Current_Year_Sum__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>