force-app/main/default/objects/OpportunityLineItem/fields/Change_Order__c.field-meta.xml
<CustomField>
    <fullName>Change_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks if Opportunity Product is a Change Order. Will be used to replace all Products where they are named &quot;Product Name - Change Order&quot;.</description>
    <inlineHelpText>Is this Product a Change Order?</inlineHelpText>
    <label>Change Order?</label>
    <type>Checkbox</type>
</CustomField>