force-app/main/default/objects/OpportunityLineItem/fields/Contracted_Runoff__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Runoff__c</fullName>
    <description>Created by Rollup Helper</description>
    <label>Contracted Runoff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>