force-app/main/default/objects/OpportunityLineItem/fields/Contracted_Total__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Total__c</fullName>
    <formula>IF( Forecast_Category__c = &quot;Contracted&quot;, Current_Year_Sum__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contracted Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>