force-app/main/default/objects/OpportunityLineItem/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <formula>PricebookEntry.Product2.ProductCode &amp;&quot; - &quot;&amp; PricebookEntry.Cost_Center__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Center</label>
    <type>Text</type>
</CustomField>