force-app/main/default/objects/OpportunityLineItem/fields/Cost_Center_F__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center_F__c</fullName>
    <formula>PricebookEntry.Cost_Center__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Center(F)</label>
    <type>Text</type>
</CustomField>