force-app/main/default/objects/OpportunityLineItem/fields/Count_of_Product_Schedules__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Product_Schedules__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count of Product Schedules</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>