force-app/main/default/objects/OpportunityLineItem/fields/Created_For_Default_Product__c.field-meta.xml
<CustomField>
    <fullName>Created_For_Default_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created for Default Product</label>
    <type>Checkbox</type>
</CustomField>