force-app/main/default/objects/OpportunityLineItem/fields/Creative_Marketing_Services_Type__c.field-meta.xml
<CustomField>
    <fullName>Creative_Marketing_Services_Type__c</fullName>
    <label>Creative - Marketing Services Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>