force-app/main/default/objects/OpportunityLineItem/fields/CRMT__Custom_Total__c.field-meta.xml
<CustomField>
    <fullName>CRMT__Custom_Total__c</fullName>
    <description>Formula field that calculates the Total Price of this line item.   Quantity *  UnitPrice - Quantity *  UnitPrice * Discount</description>
    <formula>Quantity *  UnitPrice - Quantity *  UnitPrice * Discount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field that calculates the Total Price of this line item.   Quantity *  UnitPrice - Quantity *  UnitPrice * Discount</inlineHelpText>
    <label>Line Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>