force-app/main/default/objects/OpportunityLineItem/fields/CRMT__Discount__c.field-meta.xml
<CustomField>
    <fullName>CRMT__Discount__c</fullName>
    <description>Formula field that calculates the % of discount.   ( ListPrice - UnitPrice) /  ListPrice</description>
    <formula>( ListPrice - UnitPrice) /  ListPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field that calculates the % of discount.   ( ListPrice - UnitPrice) /  ListPrice</inlineHelpText>
    <label>Line Discount %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>