force-app/main/default/objects/OpportunityLineItem/fields/CRMT__Discount_Pct__c.field-meta.xml
<CustomField>
    <fullName>CRMT__Discount_Pct__c</fullName>
    <description>Entering a value here will determine a discount from list.  Unit Price = List Price - Discount % * List Price</description>
    <inlineHelpText>Entering a value here will determine a discount from list.  Unit Price = List Price - Discount % * List Price</inlineHelpText>
    <label>Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>