force-app/main/default/objects/OpportunityLineItem/fields/CRMT__Order__c.field-meta.xml
<CustomField>
    <fullName>CRMT__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>