force-app/main/default/objects/OpportunityLineItem/fields/CRMT__Subtotal__c.field-meta.xml
<CustomField>
    <fullName>CRMT__Subtotal__c</fullName>
    <description>Formula field that calculates the Subtotal of this line item.  Quantity *  ListPrice</description>
    <formula>Quantity *  ListPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field that calculates the Subtotal of this line item.  Quantity *  ListPrice</inlineHelpText>
    <label>List Price Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>