force-app/main/default/objects/OpportunityLineItem/fields/CRMT__TempOLIDB__c.field-meta.xml
<CustomField>
    <fullName>CRMT__TempOLIDB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TempOLIDB</label>
    <type>Checkbox</type>
</CustomField>