force-app/main/default/objects/OpportunityLineItem/fields/Current_Year_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Forecast__c</fullName>
    <label>Product CY Pipeline/Projected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>