force-app/main/default/objects/OpportunityLineItem/fields/Current_Year_Sum__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Sum__c</fullName>
    <label>Product CY Contracted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>