force-app/main/default/objects/OpportunityLineItem/fields/Delete_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Delete_Sequence__c</fullName>
    <label>Delete Sequence</label>
    <length>30</length>
    <type>Text</type>
</CustomField>