force-app/main/default/objects/OpportunityLineItem/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brands Corporate</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Experiential Benelux</fullName>
            </value>
            <value>
                <fullName>Experiential US</fullName>
            </value>
            <value>
                <fullName>Experiential UK</fullName>
            </value>
            <value>
                <fullName>Properties US - Raleigh</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>LS/Cycle</fullName>
            </value>
            <value>
                <fullName>Brand Retainers US</fullName>
            </value>
            <value>
                <fullName>Brands &amp; Properties US</fullName>
            </value>
            <value>
                <fullName>Brands Middle East</fullName>
            </value>
            <value>
                <fullName>Digital Design &amp; Technology</fullName>
            </value>
            <value>
                <fullName>Next Gen</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Brands &amp; Properties UK</fullName>
            </value>
            <value>
                <fullName>Brands &amp; Properties Germany</fullName>
            </value>
            <value>
                <fullName>Trevor//Peter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>