force-app/main/default/objects/OpportunityLineItem/fields/Department_Counter__c.field-meta.xml
<CustomField>
    <fullName>Department_Counter__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>