force-app/main/default/objects/OpportunityLineItem/fields/Department_F__c.field-meta.xml
<CustomField>
    <fullName>Department_F__c</fullName>
    <formula>PricebookEntry.Department__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department (F)</label>
    <type>Text</type>
</CustomField>