force-app/main/default/objects/OpportunityLineItem/fields/Department_formula__c.field-meta.xml
<CustomField>
    <fullName>Department_formula__c</fullName>
    <formula>IF(OR(Product_Family_Formula__c = &quot;Brands&quot;,
Product_Family_Formula__c = &quot;Properties&quot;,
Product_Family_Formula__c = &quot;Experience&quot;,
PricebookEntry.Product2.Name = &quot;Excess / Savings&quot;), 
Opportunity.Owner.Department, Product_Family_Formula__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department (formula)</label>
    <type>Text</type>
</CustomField>