force-app/main/default/objects/OpportunityLineItem/fields/Division_F__c.field-meta.xml
<CustomField>
    <fullName>Division_F__c</fullName>
    <formula>PricebookEntry.Division__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Division (F)</label>
    <type>Text</type>
</CustomField>