force-app/main/default/objects/OpportunityLineItem/fields/Explanation__c.field-meta.xml
<CustomField>
    <fullName>Explanation__c</fullName>
    <externalId>true</externalId>
    <label>Explanation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>