force-app/main/default/objects/OpportunityLineItem/fields/Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Category__c</fullName>
    <formula>Opportunity.Forecast_Category_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wasserman Forecast Category</label>
    <type>Text</type>
</CustomField>