force-app/main/default/objects/OpportunityLineItem/fields/Forecast_Product__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forecast Product</label>
    <type>Checkbox</type>
</CustomField>