force-app/main/default/objects/OpportunityLineItem/fields/Forecast_Total__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Total__c</fullName>
    <formula>IF( AND( Opportunity_Record_Type__c  = &apos;Forecast&apos;,  Opportunity.Close_Date_Year__c  = 2021), UnitPrice , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>