force-app/main/default/objects/OpportunityLineItem/fields/Geography__c.field-meta.xml
<CustomField>
    <fullName>Geography__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Mexico / LATAM</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
            <value>
                <fullName>Other Asia</fullName>
            </value>
            <value>
                <fullName>Other Europe</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>Middle East and Africa</fullName>
                <isActive>false</isActive>
                <label>Middle East and Africa</label>
            </value>
            <value>
                <fullName>U.S.</fullName>
                <isActive>false</isActive>
                <label>U.S.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>