force-app/main/default/objects/OpportunityLineItem/fields/Hard_Cost__c.field-meta.xml
<CustomField>
    <fullName>Hard_Cost__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>