force-app/main/default/objects/OpportunityLineItem/fields/Involves_The_Collective__c.field-meta.xml
<CustomField>
    <fullName>Involves_The_Collective__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies if this product is through the Wasserman initiatives The Collective.</description>
    <inlineHelpText>Does this product include any initiatives or revenue associated with The Collective?</inlineHelpText>
    <label>Involves The Collective?</label>
    <type>Checkbox</type>
</CustomField>