force-app/main/default/objects/OpportunityLineItem/fields/Is_BPBR_US_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_BPBR_US_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the product added from Brands and Properties US or Brands Retainer US Cost Centers? This is for tracking and assignment of approvals.</description>
    <label>Is BPBR US Product?</label>
    <type>Checkbox</type>
</CustomField>