force-app/main/default/objects/OpportunityLineItem/fields/Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Line_Type__c</fullName>
    <label>Line Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value-Based Project</fullName>
            </value>
            <value>
                <fullName>Project Time and Expense</fullName>
            </value>
            <value>
                <fullName>Fixed Fee Project</fullName>
                <default>true</default>
                <label>Fixed Fee Project</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>