force-app/main/default/objects/OpportunityLineItem/fields/Meaningful_Id__c.field-meta.xml
<CustomField>
    <fullName>Meaningful_Id__c</fullName>
    <externalId>true</externalId>
    <label>Meaningful Id</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>