force-app/main/default/objects/OpportunityLineItem/fields/New_Business_Total__c.field-meta.xml
<CustomField>
    <fullName>New_Business_Total__c</fullName>
    <formula>IF( Opportunity_Record_Type__c = &quot;Forecast&quot;&amp;&amp; Opportunity.Close_Date_Year__c = 2021, 0 - UnitPrice, IF( Forecast_Category__c = &quot;Projected&quot;, Projected_Total__c, Contracted_Total__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Business Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>