force-app/main/default/objects/OpportunityLineItem/fields/Offset_Time__c.field-meta.xml
<CustomField>
    <fullName>Offset_Time__c</fullName>
    <formula>NOW() - 55*(1/24/60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offset Time</label>
    <type>DateTime</type>
</CustomField>