force-app/main/default/objects/OpportunityLineItem/fields/Opp_Is_Clone__c.field-meta.xml
<CustomField>
    <fullName>Opp_Is_Clone__c</fullName>
    <formula>Opportunity.Is_Clone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Is Clone</label>
    <type>Checkbox</type>
</CustomField>