force-app/main/default/objects/OpportunityLineItem/fields/Opp_Product_Dept_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opp_Product_Dept_Stage__c</fullName>
    <formula>Opportunity.Name&amp;&quot; - &quot;&amp;PricebookEntry.Product2.Name&amp;&quot; - &quot;&amp;Department_F__c&amp;&quot; - &quot;&amp;TEXT(Opportunity.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp - Product - Dept - Stage</label>
    <type>Text</type>
</CustomField>