force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Currency_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Currency_Symbol__c</fullName>
    <formula>Opportunity.Currency_Symbol__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Currency Symbol</label>
    <type>Text</type>
</CustomField>