force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Legacy_Department__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Legacy_Department__c</fullName>
    <formula>TEXT(Opportunity.Legacy_Department__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Legacy Department</label>
    <type>Text</type>
</CustomField>