force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <description>Name of opportunity owner</description>
    <formula>Opportunity.Owner.FirstName &amp;&quot; &quot;&amp; Opportunity.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>