force-app/main/default/objects/OpportunityLineItem/fields/Override_Revenue_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Override_Revenue_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Revenue Schedule</label>
    <type>Checkbox</type>
</CustomField>