force-app/main/default/objects/OpportunityLineItem/fields/Prior_Year_Sum__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_Sum__c</fullName>
    <label>Prior Year Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>