force-app/main/default/objects/OpportunityLineItem/fields/Product_CY_Omitted__c.field-meta.xml
<CustomField>
    <fullName>Product_CY_Omitted__c</fullName>
    <description>Declarative Lookup Rollup Amount when product is sitting in the forecast category of omitted (Prospecting, Lost, or Declined)</description>
    <label>Product CY Omitted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>