force-app/main/default/objects/OpportunityLineItem/fields/Product_Family_Formula__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_Formula__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Family Formula</label>
    <type>Text</type>
</CustomField>