force-app/main/default/objects/OpportunityLineItem/fields/Product_Name_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Cost_Center__c</fullName>
    <formula>&quot;PRODUCT NAME: &quot;+ Product_Name__c +&quot; - &quot;+&quot;COST CENTER: &quot;+Cost_Center_F__c</formula>
    <label>Product Name + Cost Center</label>
    <type>Text</type>
</CustomField>