force-app/main/default/objects/OpportunityLineItem/fields/Product_Name_text__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_text__c</fullName>
    <label>Product Name (text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>