force-app/main/default/objects/OpportunityLineItem/fields/Product_Schedules_Links__c.field-meta.xml
<CustomField>
    <fullName>Product_Schedules_Links__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;&amp;Id,&apos;View Schedules&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Schedules Links</label>
    <type>Text</type>
</CustomField>