force-app/main/default/objects/OpportunityLineItem/fields/Product_Sub_Family_Formula__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Family_Formula__c</fullName>
    <formula>TEXT( PricebookEntry.Product2.Sub_Division__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Division</label>
    <type>Text</type>
</CustomField>