force-app/main/default/objects/OpportunityLineItem/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Workday Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project</fullName>
                <default>true</default>
                <label>Project</label>
            </value>
            <value>
                <fullName>Contract Line Item</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>