force-app/main/default/objects/OpportunityLineItem/fields/Projected_Total__c.field-meta.xml
<CustomField>
    <fullName>Projected_Total__c</fullName>
    <formula>IF( Forecast_Category__c = &quot;Projected&quot; , Current_Year_Forecast__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>