force-app/main/default/objects/OpportunityLineItem/fields/PYCY_Contracted__c.field-meta.xml
<CustomField>
    <fullName>PYCY_Contracted__c</fullName>
    <label>PYCY Contracted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>