force-app/main/default/objects/OpportunityLineItem/fields/Retainer__c.field-meta.xml
<CustomField>
    <fullName>Retainer__c</fullName>
    <label>Retainer</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>