force-app/main/default/objects/OpportunityLineItem/fields/Revenue_Category__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Category__c</fullName>
    <label>Revenue Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ad Spend</fullName>
            </value>
            <value>
                <fullName>BillBack</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Management Fee</fullName>
            </value>
            <value>
                <fullName>PreBill (% complete)</fullName>
            </value>
            <value>
                <fullName>Retainer</fullName>
            </value>
            <value>
                <fullName>Talent Marketing (Traditional Endorsement-Base)</fullName>
            </value>
            <value>
                <fullName>Talent Marketing Revenue Passthrough</fullName>
            </value>
            <value>
                <fullName>Creative - Marketing Services</fullName>
            </value>
            <value>
                <fullName>Experiential (Excess / Savings)</fullName>
            </value>
            <value>
                <fullName>Experiential (Phone and Insurance)</fullName>
            </value>
            <value>
                <fullName>Experiential (Warehouse Handling)</fullName>
            </value>
            <value>
                <fullName>Experiential (Warehouse)</fullName>
            </value>
            <value>
                <fullName>Hospitality Management</fullName>
            </value>
            <value>
                <fullName>Media Rights Advisory</fullName>
            </value>
            <value>
                <fullName>R&amp;I - Audience Intelligence</fullName>
            </value>
            <value>
                <fullName>R&amp;I - Performance Management</fullName>
            </value>
            <value>
                <fullName>Strategic Consulting</fullName>
            </value>
            <value>
                <fullName>Valuation</fullName>
            </value>
            <value>
                <fullName>Talent Advance</fullName>
            </value>
            <value>
                <fullName>Talent Marketing (Appearance/Speaking)</fullName>
            </value>
            <value>
                <fullName>Talent Marketing (Digital/Social)</fullName>
            </value>
            <value>
                <fullName>Talent Marketing (Literary)</fullName>
            </value>
            <value>
                <fullName>Talent Marketing (Royalties/Licensing)</fullName>
            </value>
            <value>
                <fullName>Talent Marketing (Shoe - Base)</fullName>
            </value>
            <value>
                <fullName>Talent Marketing (Shoe - Incentive)</fullName>
            </value>
            <value>
                <fullName>Talent Marketing (Trading Cards / Memorabilia)</fullName>
            </value>
            <value>
                <fullName>Talent Marketing (Traditional Endorsements - Incentive)</fullName>
            </value>
            <value>
                <fullName>Team / Club (Base)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>