force-app/main/default/objects/OpportunityLineItem/fields/Revenue_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Treatment__c</fullName>
    <label>Revenue Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Accrued</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
                <default>true</default>
                <label>Deferred</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>