force-app/main/default/objects/OpportunityLineItem/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <label>Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Installment</fullName>
            </value>
            <value>
                <fullName>Percent Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>