force-app/main/default/objects/OpportunityLineItem/fields/SmartSheet_Project_Plan__c.field-meta.xml
<CustomField>
    <fullName>SmartSheet_Project_Plan__c</fullName>
    <description>Salesforce to Smartsheet Integration: Populated from Smartsheet ticket to Salesforce OpportunityLineItem via Boomi</description>
    <label>SmartSheet Project Plan</label>
    <type>Url</type>
</CustomField>