force-app/main/default/objects/OpportunityLineItem/fields/SmartSheet_Ticket_ID__c.field-meta.xml
<CustomField>
    <fullName>SmartSheet_Ticket_ID__c</fullName>
    <description>Salesforce to Smartsheet Integration: Populated from Smartsheet ticket ID and sent back to SF OpportunityLineItem Product</description>
    <externalId>true</externalId>
    <label>SmartSheet Ticket ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>