force-app/main/default/objects/OpportunityLineItem/fields/SmartSheet_Ticket_Link__c.field-meta.xml
<CustomField>
    <fullName>SmartSheet_Ticket_Link__c</fullName>
    <description>SmartSheet URL to Ticket request and sent back to Salesforce on: OpportunityLineItem.SmartSheet_Ticket_Link__c</description>
    <label>SmartSheet Ticket Link</label>
    <type>Url</type>
</CustomField>